Check in Michiel van Leeuwen's patch for bug 135076 that fixes the problem where you get scroll arrows in submenus when the submenus are initially opened so close to the bottom of the screen that their position is adjusted to make them fit on screen. r=bryner, sr=ben.